# alzheption

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
alzheption/: functions.py  utils.py
alzheption/src/: Alzheption Classificator.ipynb  Alzheption Trainer.ipynb  Alzheption Uploader.ipynb  Augmentation.ipynb  Balance.ipynb  TrainKELM.ipynb  TrainOSKELM.ipynb  TrainTfELM.ipynb  Transform.ipynb  Visualization.ipynb  debug.py  elm.py  functions.py  utils.py
alzheption/src/alzheption/: clahe.py  classificator.py  extractor.py  oskelm_layer.py  utils.py
alzheption/src/result/: TrainKELM.parquet  TrainKELM_ClaheNormalize.parquet  TrainKELM_Complex.parquet  TrainKELM_Normalize.parquet  TrainKELM_Original.parquet  TrainOSELM_Base.parquet  TrainOSELM_BrightnessContrast_Hflip.parquet  TrainOSELM_Complex.parquet  TrainOSELM_Equalize.parquet  TrainOSELM_EqualizeThreshold.parquet  TrainOSELM_Normalize.parquet  TrainOSELM_Original.parquet  TrainOSELM_Original_Brightness_Contrast.parquet  TrainOSELM_Original_Fairly.parquet  TrainOSELM_Original_Hflip.parquet  TrainOSELM_Original_HflipBrightness_Contrast.parquet  TrainOSELM_Original_HflipRotate.parquet  TrainOSELM_Original_HflipRotateBlur.parquet  TrainOSELM_Original_HflipRotateBlurShear.parquet  TrainOSELM_Original_Hflip_Half.parquet  TrainOSELM_Original_Rotate.parquet  TrainOSELM_Original_Vflip.parquet  TrainOSELM_PCA100_Original_HflipRotateBlurShear.parquet  path_balance.csv  (+1 more)
alzheption/tex/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  main.cls  main.tex  references.bib
