[project]
name = "alzheption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kornia>=0.7.4",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pydicom>=3.0.1",
    "tensorflow>=2.18.0",
    "torchvision>=0.20.1",
]
